# model-vision

./: .gitignore  Cargo.toml  README.md
examples/dogcat/: constants.rs  data.rs  inference.rs  train.rs
src/: backbone.rs  lib.rs
src/encoder/: classification.rs  mod.rs  projection.rs
